<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:animateLayoutChanges="true"
    android:background="@drawable/bg_main_background"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="240dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="30dp"
                android:padding="16dp"
                android:src="@drawable/img_logo_hsu" />

            <EditText
                android:id="@+id/edt_userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@color/transparent"
                android:drawableLeft="@drawable/ic_person_white_24dp"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/edt_userName"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="9dp"
                android:shadowColor="@color/white"
                android:textColorHint="@color/white" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white" />

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/transparent"
                android:drawableLeft="@drawable/ic_lock_white_24dp"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/edt_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="9dp"
                android:textColorHint="@color/white" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white" />

            <CheckBox

                android:id="@+id/chbox_saveInformation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:buttonTint="@color/white"
                android:padding="9dp"
                android:text="@string/chbox_saveInformation"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_signin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_background"
                android:clickable="true"
                android:focusable="true"
                android:padding="9dp"
                android:text="@string/btn_signin"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_background"
                android:clickable="true"
                android:focusable="true"
                android:padding="9dp"
                android:text="@string/btn_signup"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txt_getPassWord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:padding="9dp"
                android:text="@string/txt_getPassWord"
                android:textColor="@color/white" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>